# dataforge

./: .gitignore  .pre-commit-config.yaml  .trivyignore  LICENSE  Makefile  PLAN.md  README.md
backend/: .dockerignore  Dockerfile  celerybeat-schedule  manage.py  pyproject.toml
backend/audit/: apps.py  models.py
backend/audit/api/: serializers.py  urls.py  viewsets.py
backend/audit/application/: reader.py  services.py  writer.py
backend/audit/domain/: ids.py  models.py
backend/audit/infra/: __init__.py  request_id.py  rls.py  sanitize.py
backend/audit/migrations/: 0001_initial.py
backend/audit/tasks/: __init__.py
backend/audit/tests/: conftest.py  test_model_and_integration.py  test_reader.py  test_sanitize.py  test_writer.py
backend/catalog/: apps.py  models.py
backend/catalog/api/: serializers.py  urls.py  viewsets.py
backend/catalog/application/: audit.py  dry_run.py  ingest.py  publish.py  services.py  validation.py  validation_l3.py
backend/catalog/domain/: ids.py  models.py
backend/catalog/infra/: __init__.py  rls.py  triggers.py
backend/catalog/migrations/: 0001_initial.py
backend/catalog/schema/: manifest-v0.schema.json
backend/catalog/tasks/: __init__.py
backend/chaos/: apps.py  models.py
backend/chaos/api/: serializers.py  urls.py  viewsets.py
backend/chaos/application/: answer_key.py  services.py  validation.py
backend/chaos/domain/: models.py
backend/chaos/infra/: __init__.py  late_buffer.py  recorder.py
backend/chaos/migrations/: 0001_initial.py
backend/chaos/tasks/: __init__.py
backend/config/: __init__.py  asgi.py  celery.py  logging.py  problems.py  rate_limit_middleware.py  schema.py  urls.py  ws_routing.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py  test_postgres.py
backend/dataforge_engine/: __init__.py  pipeline.py  ports.py
backend/dataforge_engine/behavior/: __init__.py  background.py  checkpoint.py  clock.py  distributions.py  dry_run.py  errors.py  evaluate.py  expr_eval.py  generators.py  intensity.py  interpreter.py  ir.py  observer.py  partitioning.py  pools.py  recorder.py  rng.py  runtime.py  scheduler.py  seeding.py  shard.py  transaction.py  vocab.py
backend/dataforge_engine/chaos/: __init__.py  context.py  pipeline.py  policy.py  prf.py  record.py
backend/dataforge_engine/envelope/: __init__.py  build.py  event_id.py  partition.py  schema_gen.py  serialize.py  strip.py  timestamps.py  types.py  validate.py
backend/dataforge_engine/manifest/: __init__.py  derive.py  errors.py  expr.py  generators.py  linalg.py  model.py  overlay.py  parse.py  paths.py  schema_gen.py  semantic_bounds.py  semantic_compat.py  semantic_generators.py  semantic_machine.py  semantic_referential.py  validate.py
backend/dataforge_engine/seeds/: __init__.py
backend/delivery/: apps.py  models.py
backend/delivery/api/: consumers.py  serializers.py  urls.py  viewsets.py
backend/delivery/application/: services.py  stream_stats_service.py  ws_auth.py  ws_send_queue.py
backend/delivery/domain/: __init__.py  channel.py  cursor.py  event_filter.py  models.py  ws_cursor.py  ws_protocol.py
backend/delivery/infra/: __init__.py  buffer_reader.py  buffer_stats.py  buffer_store.py  buffer_writer_channel.py  kafka_topics.py  migration_ops.py  partitions.py  stream_stats.py  ws_connections.py  ws_pusher_channel.py
backend/delivery/migrations/: 0001_initial.py  0002_envelope_text.py
backend/delivery/tasks/: __init__.py
backend/delivery/tests/: test_provision_topics.py
backend/generation/: apps.py  models.py
backend/generation/api/: serializers.py  urls.py  viewsets.py
backend/generation/application/: engine_driver.py  services.py
backend/generation/domain/: models.py
backend/generation/infra/: __init__.py  clock.py  compression.py  ledger_archive.py  ledger_sink.py  migration_ops.py  partitions.py  pool_store.py  quotas.py  snapshot_store.py  storage.py
backend/generation/migrations/: 0001_initial.py
backend/generation/tasks/: __init__.py  archive.py
backend/identity/: apps.py  models.py
backend/identity/api/: cookies.py  serializers.py  urls.py  viewsets.py
backend/identity/application/: accounts.py  audit.py  auth.py  permissions.py  services.py  tokens.py
backend/identity/domain/: email.py  ids.py  models.py
backend/identity/infra/: __init__.py  captcha.py  disposable_email.py  email.py  jwt.py  rate_limit.py  tokens.py
backend/identity/migrations/: 0001_initial.py  0002_usertoken_alter_user_managers_and_more.py
backend/identity/tasks/: __init__.py
backend/identity/tests/: conftest.py  test_abuse_controls.py  test_auth_endpoints.py  test_jwt_auth.py  test_permissions.py  test_problems.py  test_tokens.py  test_user_model.py
backend/observation/: apps.py  models.py
backend/observation/api/: health.py  middleware.py  problem_details.py  serializers.py  (+2 more)
backend/registry/: apps.py  models.py
backend/runner/: __init__.py  __main__.py  checkpoint_store.py  fencing.py  leases.py  lifecycle.py  publisher.py  shard_worker.py  supervisor.py
backend/schema/: envelope-1.0.schema.json  openapi.yaml  ws-protocol-v1.schema.json
backend/streams/: apps.py  models.py
backend/tenancy/: apps.py  models.py
backend/tests/: seeds.py  test_runner_args.py  test_settings.py
(+661 files in other folders)
